fixed: portfolio spacing

--- a/site/src/styles/layout/_grid.sass
+++ b/site/src/styles/layout/_grid.sass
@@ -1,3 +1,3 @@
 .card-grid
   display: grid
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr))
+  grid-template-columns: repeat(auto-fill, minmax(320px, 420px))
